--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "sba-319new",
+  "name": "grades-api-class",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
-  "type":"module",
+  "main": "serber.mjs",
+  "type":  "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.mjs",
-    "dev": "nodemon server.mjs"
+    "dev":"nodemon server.mjs"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,7 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
   }
